--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@react-email/components": "^0.0.7",
+        "@react-email/tailwind": "^0.0.8",
         "@types/node": "20.4.3",
         "@types/react": "18.2.15",
         "@types/react-dom": "18.2.7",
@@ -21,7 +23,9 @@
         "postcss": "8.4.27",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-email": "^1.9.4",
         "react-wrap-balancer": "^1.0.0",
+        "resend": "^0.17.2",
         "tailwindcss": "3.3.3",
         "typescript": "5.1.6"
     },
