--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "thegagan-portfoilio",
+    "name": "new_portfoilio",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -9,32 +9,29 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@react-email/components": "^0.0.7",
-        "@react-email/tailwind": "^0.0.8",
-        "@tsparticles/engine": "^3.2.1",
-        "@tsparticles/react": "^3.0.0",
-        "@tsparticles/slim": "^3.2.1",
-        "@types/node": "20.4.3",
-        "@types/react": "18.2.15",
-        "@types/react-dom": "18.2.7",
-        "autoprefixer": "10.4.14",
-        "clsx": "^2.1.0",
-        "eslint": "8.45.0",
-        "eslint-config-next": "13.4.12",
-        "framer-motion": "^10.18.0",
-        "next": "13.4.12",
-        "next-themes": "^0.2.1",
-        "postcss": "8.4.27",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-email": "^1.9.4",
-        "react-wrap-balancer": "^1.0.0",
-        "resend": "^0.17.2",
-        "tailwind-merge": "^2.2.1",
-        "tailwindcss": "3.3.3",
-        "typescript": "5.1.6"
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@react-email/components": "^0.0.16",
+        "@react-email/tailwind": "^0.0.15",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "framer-motion": "^11.1.7",
+        "lucide-react": "^0.376.0",
+        "next": "14.2.3",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-wrap-balancer": "^1.1.0",
+        "resend": "^3.2.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
-        "@svgr/webpack": "^8.0.1"
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "postcss": "^8",
+        "prettier-plugin-tailwindcss": "^0.5.14",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
     }
 }
