--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-    "name": "new_portfoilio",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@radix-ui/react-icons": "^1.3.0",
-        "@radix-ui/react-slot": "^1.0.2",
-        "@react-email/components": "^0.0.16",
-        "@react-email/tailwind": "^0.0.15",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.1",
-        "framer-motion": "^11.1.7",
-        "lucide-react": "^0.376.0",
-        "next": "14.2.3",
-        "react": "^18",
-        "react-dom": "^18",
-        "react-wrap-balancer": "^1.1.0",
-        "resend": "^3.2.0",
-        "tailwind-merge": "^2.3.0",
-        "tailwindcss-animate": "^1.0.7"
-    },
-    "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "postcss": "^8",
-        "prettier-plugin-tailwindcss": "^0.5.14",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+  "name": "new_portfoilio",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/components": "^0.0.16",
+    "@react-email/tailwind": "^0.0.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
+    "lucide-react": "^0.376.0",
+    "next": "15.1.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-wrap-balancer": "^1.1.0",
+    "resend": "^3.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.7",
+    "@types/node": "^20",
+    "@types/react": "19.1.5",
+    "@types/react-dom": "19.1.5",
+    "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.5",
+      "@types/react-dom": "19.1.5"
     }
+  }
 }
